crates/churl/tests/snapshots/tui_snapshot__url_bar_shows_indicators_for_auth_and_placeholders.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: rendered
---
┏ Explorer ━━━━━━━━━━━━━━━━━━┓  List items                                      
┃  ▾ api                     ┃┌ URL ───────────────────────────────────────────┐
┃>   List items              ┃│GET  https://{{host}}/items   auth:basic  {{2}} │
┃                            ┃└────────────────────────────────────────────────┘
┃                            ┃┌ Request ───────────────────────────────────────┐
┃                            ┃│  Params(0)     Headers(0)     Auth(1)   ›      │
┃                            ┃│  (no params — a to add)                        │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃└────────────────────────────────────────────────┘
┃                            ┃┌ Response ──────────────────────────────────────┐
┃                            ┃│no response yet                                 │
┃                            ┃│GET https://{{host}}/items                      │
┃                            ┃│                                                │
┃                            ┃│press ctrl-s to send                            │
┃                            ┃│                                                │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│                                                │
┌ Sequences ─────────────────┐│                                                │
│<leader>s a to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 EXPLORER · demo · ? help · space leader · / search · : palette
