crates/churl/tests/snapshots/tui_snapshot__url_popup_editor.snap
---
source: crates/churl/tests/tui_snapshot.rs
assertion_line: 1410
expression: rendered
---
┌ Explorer ──────────────────┐ List users                                       
│  ▸ orders                  │┏ URL ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│  ▾ users                   │┃GET  https://api.test/users                     ┃
│>   List users              │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
│    Create user             │┌ Request ───────────────────────────────────────┐
│    Get user                ││ Params(0)   Headers(0)   Auth   Body           │
│                            ││  (no params — a to add)                        │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│           ┏ Edit URL ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓           │
│           ┃https://api.test/users                                ┃           │
│           ┃  Normal                                              ┃───────────┘
│           ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━ enter commit · esc cancel ┛───────────┐
│                            ││no response yet                                 │
│                            ││GET https://api.test/users                      │
│                            ││                                                │
│                            ││press ctrl-s to send                            │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 URL · demo · ? help · space leader · / search · : palette
