crates/churl/tests/snapshots/tui_snapshot__zoom_request_collapsed_summary.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐ List users                                       
│  ▸ orders                  │┌ URL ───────────────────────────────────────────┐
│  ▾ users                   ││GET  https://api.test/users                     │
│>   List users              │└────────────────────────────────────────────────┘
│    Create user             │┏ Request ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│    Get user                │┃ [1] Params(0)   [2] Headers(0)   [3] Auth   [4]┃
│                            │┃  (no params — a to add)                        ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
└────────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ Sequences ─────────────────┐┌ Response ──────────────────────────────────────┐
│<leader>s a to add          ││no response yet                                 │
└────────────────────────────┘└────────────────────────────────────────────────┘
 REQUEST · demo · ? help · space leader · / search · : palette
