crates/churl/tests/snapshots/tui_snapshot__zoom_response_collapsed_summary.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐▐ List users ▌                                    
│  ▸ orders                  │┌ URL ───────────────────────────────────────────┐
│  ▾ users                   ││GET  https://api.test/users                     │
│>   List users              │└────────────────────────────────────────────────┘
│    Create user             │┌ Request ───────────────────────────────────────┐
│    Get user                ││▐ Params(0) ▌ ▐ Headers(0) ▌ ▐ Auth ▌ ▐ Body ▌  │
│                            │└────────────────────────────────────────────────┘
│                            │┏ Response 200 OK · 142 ms · 2 B · 1 header  [h] ┓
│                            │┃1 {}                                            ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
└────────────────────────────┘┃                                                ┃
┌ Sequences ─────────────────┐┃                                                ┃
│<leader>s a to add          │┃                                                ┃
└────────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 RESPONSE · demo · ? help · space leader · / search · : palette
